fixed position of scrollbar and removed comments

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1292,7 +1292,10 @@ slider-three input[type=range]::-ms-thumb {
 
 /* slider five */
 .slider-five {
+  margin: 0 auto;
   text-align: center;
+  width: 450px;
+  height: 50px;
 }
 
 .slider-five input {
@@ -1306,8 +1309,6 @@ slider-three input[type=range]::-ms-thumb {
   -ms-appearance: none;
   height: 28px;
   width: 330px;
-  postion: relative;
-  /*left: 75px;*/
   border-radius: 20px;
   padding: 2px 10px;
   background: #2B2E31;
